--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,82 @@
     transform: rotate(360deg);
   }
 }
+
+.mild {
+  color: #fff;
+  background-color: salmon;
+}
+
+.doyoung {
+  color: #fff;
+  background-color: skyblue;
+}
+
+.mild,
+.doyoung {
+  font-size: 16px;
+  font-weight: bold;
+  padding: 15px 20px;
+  height: 40px;
+  width: auto;
+  border-radius: 8px;
+  border: 0;
+}
+
+
+p {
+  font-size: 24px;
+  font-style: italic;
+}
+
+.wrapper-lover {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.lover-box {
+  width: calc(33.33% - 60px);
+  background-color: salmon;
+  margin: 20px;
+}
+
+.lover-box.rose {
+  background-color: red;
+}
+
+.lover-box.salmon {
+  background-color: salmon;
+}
+
+.lover-box.lemon {
+  background-color: yellow;
+}
+
+.emerald {
+  color: greenyellow;
+}
+
+.weed {
+  color: wheat;
+}
+
+
+.azure {
+  color: blueviolet;
+}
+
+.sky {
+  color: lightseagreen;
+}
+
+.pink {
+  color: orange;
+}
+
+.whiteline {
+  color:sandybrown;
+}
